<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.faisal.protoolkit.ui.home.HomeFragment"
        android:label="@string/bottom_nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/toolsFragment"
        android:name="com.faisal.protoolkit.ui.tools.ToolsFragment"
        android:label="@string/bottom_nav_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.faisal.protoolkit.ui.settings.SettingsFragment"
        android:label="@string/bottom_nav_settings" />

    <fragment
        android:id="@+id/unitConverterFragment"
        android:name="com.faisal.protoolkit.ui.tools.unit.UnitConverterFragment"
        android:label="@string/label_unit_converter"
        tools:layout="@layout/fragment_unit_converter" />

    <fragment
        android:id="@+id/textToolsFragment"
        android:name="com.faisal.protoolkit.ui.tools.text.TextToolsFragment"
        android:label="@string/label_text_tools"
        tools:layout="@layout/fragment_text_tools" />

    <fragment
        android:id="@+id/deviceInfoFragment"
        android:name="com.faisal.protoolkit.ui.tools.device.DeviceInfoFragment"
        android:label="@string/label_device_info"
        tools:layout="@layout/fragment_device_info" />

    <fragment
        android:id="@+id/networkToolsFragment"
        android:name="com.faisal.protoolkit.ui.tools.network.NetworkToolsFragment"
        android:label="@string/label_network_tools"
        tools:layout="@layout/fragment_network_tools" />

    <fragment
        android:id="@+id/fileToolsFragment"
        android:name="com.faisal.protoolkit.ui.tools.file.FileToolsFragment"
        android:label="@string/label_file_tools"
        tools:layout="@layout/fragment_file_tools" />

    <fragment
        android:id="@+id/qrScannerFragment"
        android:name="com.faisal.protoolkit.ui.tools.qr.QrScannerFragment"
        android:label="@string/label_qr_scanner"
        tools:layout="@layout/fragment_qr_scanner" />

    <fragment
        android:id="@+id/documentScannerFragment"
        android:name="com.faisal.protoolkit.ui.tools.document.DocumentScannerFragment"
        android:label="@string/label_doc_scanner"
        tools:layout="@layout/fragment_document_scanner">
        <action
            android:id="@+id/action_documentScannerFragment_to_documentDetailFragment"
            app:destination="@id/documentDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/documentDetailFragment"
        android:name="com.faisal.protoolkit.ui.tools.document.DocumentDetailFragment"
        android:label="@string/label_document_detail"
        tools:layout="@layout/fragment_document_detail">
        <argument
            android:name="document_id"
            app:argType="string" />
        <action
            android:id="@+id/action_documentDetailFragment_to_documentScannerFragment"
            app:destination="@id/documentScannerFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="false" />
    </fragment>

</navigation>
