<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_screen"
    tools:context=".ui.tools.text.TextToolsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/text_tools_input_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="4"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:importantForAccessibility="yes" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/inputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUppercase"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_weight="1"
                android:text="@string/text_tools_uppercase" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLowercase"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_weight="1"
                android:text="@string/text_tools_lowercase" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTitlecase"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_tools_titlecase" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCopy"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/text_tools_copy"
            app:layout_constraintTop_toBottomOf="@id/buttonContainer"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/outputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/brand_inverse_on_surface"
            app:layout_constraintTop_toBottomOf="@id/buttonCopy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Sample Output" />

        <TextView
            android:id="@+id/wordCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@id/outputText"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Words: 0" />

        <TextView
            android:id="@+id/characterCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/wordCount"
            app:layout_constraintStart_toEndOf="@id/wordCount"
            tools:text="Characters: 0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
